# neocarta

./: .gitignore  CHANGELOG.md  Makefile  README.md  from_bigquery.py  main.py  pyproject.toml  run_agent.py  run_create_graph.py  run_query_logs.py
.github/workflows/: build-release-pypi.yml  pr-main-ruff.yml  pr-main-tests.yml  pr-main-validation.yml
agent/: agent.py
assets/mermaid/architecture/: dataplex-workflow-architecture.mmd  embeddings-workflow-architecture.mmd  full-workflow-architecture.mmd
assets/mermaid/data_model/: glossary-metadata-data-model-1.mmd  lpg-graph-data-model.mmd  query-log-data-model-1.mmd  sql-graph-data-model-core.mmd  sql-graph-data-model-expanded-1.mmd
assets/misc/: bq-mcp-curl-test.sh
connectors/: load.py  models.py
connectors/bigquery/: __init__.py  extract.py  transform.py  workflow.py
connectors/dataplex/: README.md
connectors/query_log/: __init__.py  extract.py  models.py  transform.py  utils.py  workflow.py
data_model/: README.md  constraints.py  core.py  expanded.py  indexes.py
datasets/: __init__.py  create-ecommerce-dataset.sql  ecommerce_bigquery.py
datasets/csv/: business_term_info.csv  category_info.csv  column_info.csv  column_references_info.csv  database_info.csv  glossary_info.csv  query_column_info.csv  query_info.csv  query_table_info.csv  schema_info.csv  table_info.csv  value_info.csv
datasets/dataplex/: __init__.py  connect_terms.py
embeddings/: __init__.py  openai_embeddings.py  utils.py
eval/: README.md  USAGE.md  __init__.py  inference_metrics.py  main.py  report.py  retrieval_metrics.py  runner.py  sql_parser.py  token_metrics.py
eval/datasets/: __init__.py  ecommerce_samples.yaml  models.py  question_bank.py  schema_registry.py
eval/retrievers/: __init__.py  bigquery_schema_retriever.py
examples/: README.md  async_embeddings.py  bigquery.py  bigquery_query_log_db.py  bigquery_query_log_file.py  csv_connector.py  dataplex.py  sync_embeddings.py
mcp_server/: README.md  pyproject.toml
mcp_server/src/: embeddings.py  models.py  server.py  settings.py
mcp_server/src/mcp_server/: __init__.py  embeddings.py  models.py  server.py
neocarta/: __init__.py  enums.py
neocarta/_mcp/: README.md  models.py  server.py  settings.py
neocarta/connectors/: models.py
neocarta/connectors/bigquery/: __init__.py
neocarta/connectors/bigquery/logs/: __init__.py
neocarta/connectors/bigquery/schema/: __init__.py  connector.py  extract.py  models.py  transform.py
neocarta/connectors/csv/: README.md  __init__.py  connector.py  extract.py  transform.py
neocarta/connectors/dataplex/: README.md
neocarta/connectors/query_log/: README.md  __init__.py  connector.py  models.py  transform.py  utils.py
neocarta/connectors/utils/: __init__.py
neocarta/data_model/: README.md  __init__.py
neocarta/data_model/lpg/: README.md  __init__.py
neocarta/data_model/rdbms/: README.md  expanded.py
neocarta/embeddings/: README.md  openai_embeddings.py  utils.py
neocarta/ingest/: README.md  __init__.py  constraints.py  utils.py
neocarta/ingest/lpg/: constraints.py
neocarta/ingest/rdbms/: README.md  __init__.py  constraints.py  load.py
semantic_graph/: __init__.py
semantic_graph/connectors/: __init__.py  load.py  models.py
semantic_graph/connectors/bigquery/: __init__.py  extract.py  models.py  transform.py  workflow.py
semantic_graph/connectors/bigquery/logs/: __init__.py  connector.py  extract.py  models.py  workflow.py
semantic_graph/connectors/bigquery/schema/: __init__.py  extract.py  models.py  transform.py  workflow.py
semantic_graph/connectors/csv/: README.md  __init__.py  connector.py  extract.py  models.py  transform.py  workflow.py
semantic_graph/connectors/dataplex/: README.md  __init__.py  connector.py  extract.py  models.py  transform.py  workflow.py
semantic_graph/connectors/query_log/: README.md  __init__.py  extract.py  transform.py  utils.py  workflow.py
semantic_graph/connectors/utils/: generate_id.py
semantic_graph/data_model/: constraints.py  core.py  indexes.py
semantic_graph/data_model/lpg/: README.md  __init__.py  core.py  expanded.py
semantic_graph/data_model/rdbms/: README.md  __init__.py  core.py
semantic_graph/embeddings/: openai_embeddings.py  utils.py
semantic_graph/ingest/: indexes.py  utils.py
semantic_graph/ingest/lpg/: README.md  constraints.py
semantic_graph/ingest/rdbms/: constraints.py  load.py
tests/integration/connectors/csv/: __init__.py  conftest.py  test_connector.py  test_connector_IT.py  test_custom_filenames.py  test_custom_filenames_IT.py  test_ecommerce_dataset.py  test_ecommerce_dataset_IT.py  test_workflow.py
tests/smoke/: test_imports.py
tests/unit/connectors/: test_loader.py
tests/unit/connectors/bigquery/: __init__.py  conftest.py  test_extract.py  test_transform.py
tests/unit/connectors/bigquery/logs/: conftest.py  test_extract.py
tests/unit/connectors/bigquery/schema/: __init__.py  conftest.py  test_extract.py  test_transform.py
tests/unit/connectors/csv/: conftest.py  test_extract.py
tests/unit/connectors/dataplex/: test_warnings.py
tests/unit/connectors/query_log/: __init__.py  conftest.py  test_bigquery_query_log.json  test_extract.py  test_transform.py  test_utils.py
tests/unit/connectors/utils/: test_generate_id.py
tests/unit/data_model/lpg/: test_core.py  test_expanded.py  test_warnings.py
tests/unit/data_model/rdbms/: test_core.py  test_expanded.py
